@@ -1,11 +1,19 @@
+2010-09-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	Bignums via gmp in sbcl.
+	* num_sb.lisp, gmp_wrap.c: New files.
+	src/interp/util.lisp, src/lisp/fricas-lisp.lisp: Call
+	new functions.
+        configure.ac, src/lib/Makefile.in, src/lisp/Makefile.in: Adjust.
+
 2010-09-22  Gabriel Dos Reis  <gdr@cs.tamu.edu>
             patch identified by
-	    Alfredo Portes <doyenatccny@gmail.com>
+	    Alfredo Portes  <doyenatccny@gmail.com>
 
 	* src/interp/int-top.boot: Eliminate double prompt at
 	startup.
 
-2010-09-22  Aleksej Saushev <asau@inbox.ru>
+2010-09-22  Aleksej Saushev  <asau@inbox.ru>
 
 	* src/scripts/mkdist.sh: Simplify removal of ".svn"
 	subdirectories.
